Imported "image" partial to Utility Index

--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,3 +1,5 @@
 // ==========================================================================
 // Utilities Imports
 // ==========================================================================
+
+@import 'images';
