--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -1,7 +1,23 @@
 // Center text
 
 %centered {
-  
+
   text-align: center;
-  
+
+}
+
+//Justify text
+
+%justified {
+
+text-align: justify;
+
+}
+
+//Header Student Name and Main Navigation
+
+%headercontent {
+  display: block;
+    padding: 10px 1px;
+	text-decoration: none;
 }
