Organized _extends and footer css

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,14 +4,27 @@
 	display: inline-block;
 	float: left;
 }
+
 .back-to-top {
 	display: inline-block;
 	float: right;
 	list-style: none;
+	 
+       @include tablet {
+		display: none;
+	}
 }
-.footer-nav {
+
+ul.footer-nav {
 	display: none;
+	 
+    @include tablet {
+		display: inline-block;
+		list-style-type: none;
+		float: right;
+	}
 }
+
 .line-separator {
 	height: 1px;
 	border-bottom: 1px solid $color-separator;
