Added clearfix extend

--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -17,3 +17,13 @@
 	padding: 10px 1px;
 	text-decoration: none;
 }
+
+//Clearfix
+
+%clearfix {
+&:after  {
+  content: "";
+  display: table;
+  clear: both;
+}
+}
