header repositioned to desktop version

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,8 +8,10 @@
 /* ---- Navigation ---- */
 
 .main-nav {
+ 
+     
 	&-nav li {
-		background: $color-navigation;
+        background: $color-navigation;
 		margin: 5px;
 		list-style: none;
 		max-width: 90%;
@@ -21,14 +23,16 @@
 			background: none;
             text-align: center;
 		}
+        
     }
-		@include desktop {
-			display: inline-block;
+    
+    @include desktop {
+            display: inline-block;
 			float: right;
 			min-width: 350px;
-		}
-		
-	
+        }
+        
+  
 	&-nav a {
 		color: $color-link-default;
 		text-transform: uppercase;
@@ -36,21 +40,32 @@
 	&-nav a:hover {
 		color: $color-link-default;
 	}
-	
+}
+    
+    
+    
+    
+    
 	.name a {
-		@include text(25px, $weight: bold, $color: $color-text-default);
+        
+        @include text(25px, $weight: bold, $color: $color-text-default);
 		margin: 0;
+    }
+    
+    .name {
         
 	 @include desktop {
-			float: left;
+            float: left;
 			margin: 0 1%;
 			padding: 0 2px;
 		}
+        
+    }
 	   
-	}
+	
 	.name a,
 	.main-nav {
-		@extend %headercontent;
+        @extend %headercontent;
         
         
 	}
@@ -64,4 +79,4 @@
 		margin-top: 100px;
 	}
     }
-}
+
