--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,75 +8,53 @@
 /* ---- Navigation ---- */
 
 .main-nav {
- 
-     
 	&-nav li {
-        background: $color-navigation;
+		background: $color-container;
 		margin: 5px;
 		list-style: none;
 		max-width: 90%;
-     
-        @include tablet {
+		@include tablet {
 			display: inline-block;
 			margin-right: 1%;
 			margin-left: 2%;
 			background: none;
-            text-align: center;
+			text-align: center;
 		}
-        
-    }
-    
-    @include desktop {
-            display: inline-block;
-			float: right;
-			min-width: 350px;
-        }
-        
-  
+	}
+	@include desktop {
+		display: inline-block;
+		float: right;
+		min-width: 350px;
+	}
 	&-nav a {
 		color: $color-link-default;
 		text-transform: uppercase;
 	}
 	&-nav a:hover {
-		color: $color-link-default;
+		background-color: $color-link-active;
 	}
 }
-    
-    
-    
-    
-    
-	.name a {
-        
-        @include text(25px, $weight: bold, $color: $color-text-default);
-		margin: 0;
-    }
-    
-    .name {
-        
-	 @include desktop {
-            float: left;
-			margin: 0 1%;
-			padding: 0 2px;
-		}
-        
-    }
-	   
-	
-	.name a,
-	.main-nav {
-        @extend %headercontent;
-        
-        
+
+.name a {
+	@include text(25px, $weight: bold, $color: $color-text-default);
+	margin: 0;
+}
+
+.name {
+	@include desktop {
+		float: left;
+		margin: 0 1%;
+		padding: 0 2px;
 	}
+}
 
-
-
+.name a,
+.main-nav {
+	@extend %headercontent;
+}
 
 .profile {
-	
-    @include desktop {
+	@include desktop {
 		margin-top: 100px;
 	}
-    }
-
+}
